[package]
name = "tenjin"
version = "0.2.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
license = "MIT"
repository = "https://github.com/quadrupleslap/tenjin"
documentation = "https://docs.rs/tenjin"
description = "A fast and simple template engine."

[dependencies]
htmlescape = "0.3"
serde_json = "1.0"
